--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 
 header {
     position: relative;
-    background-image: url('Images/Night.jpg');
+    background-image: url('../images/Night.jpg');
     background-size: cover; /* or contain, depending on how you want the image to fit */
     background-position:center;
     color: #fff;
@@ -96,7 +96,7 @@ main {
 
 footer {
     position: relative;
-    background-image: url('Images/Night.jpg');
+    background-image: url('../images/Night.jpg');
     background-size: cover; /* or contain, depending on how you want the image to fit */
     background-position:center;
     color: #fff;
