--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ header {
     }
 
     .search-bar input[type="text"] {
-        max-width: 120px;
+        max-width: 100px;
     }
 }
 
@@ -111,13 +111,13 @@ header {
     float: right; /* Align to the right */
 }
 
-h1{
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; /* Add a black outline */
-}
-
-.header-title{
-    float: left; /* Align */
-    position: absolute;
+.header-logo {
+    width: 200px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    position: absolute; /* Position absolutely */
+    left: 10px; /* Adjust the left position to your preference */
+    top: 10px; /* Adjust the top position to your preference */
+    z-index: 1; /* Ensure it stays above other elements */
 }
 
 nav {
@@ -148,12 +148,12 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #006b79; /* Change background color on hover */
+    background-color: #3CB3F5; /* Change background color on hover */
     color: #ffffff; /* Change text color on hover */
 }
 
 .icon:hover {
-    color: #006b79; /* Change the color to the desired glow color */
+    color: #3CB3F5; /* Change the color to the desired glow color */
     transition: color 0.3s ease; /* Smooth transition effect */
     /* Add any additional styling for the glow effect */
     /* For example, you can add box-shadow */
