--- a/css/styles.css
+++ b/css/styles.css
@@ -39,16 +39,26 @@ header {
     display: flex;
     align-items: center;
     justify-content:center; /* Center horizontally */
+    position: relative;
 }
 
 .search-bar input[type="text"] {
     flex: 1;
-    border: none;
+    border: 1px solid #ccc;
     outline: none;
-    padding: 5px;
+    padding: 6px;
     width: 100%;
     max-width: 600px;
     border-radius: 5px;
+    transition: border-color 0.3s;
+}
+
+.search-bar input[type="text"]:focus {
+    border-color: #3CB3F5; /* Change border color when focused */
+}
+
+.search-bar input[type="text"]::placeholder {
+    color: #ccc; /* Placeholder text color */
 }
 
 /* Media query for smaller screens */
@@ -58,7 +68,7 @@ header {
     }
 
     .header-logo {
-        max-width:155px;
+        max-width:150px;
         height: auto;
         position: static;
         margin-bottom: 10px;
@@ -79,6 +89,7 @@ header {
         margin-left: 0;
         margin-right: 10px;
         margin-bottom: 10px;
+        margin-top: 4px;
         font-size: 10px; /* Adjust margin as needed */
       }
 
@@ -115,6 +126,7 @@ header {
         margin-left: 0;
         margin-right: 10px;
         margin-bottom: 10px;
+        margin-top: 4px;
         font-size: 10px; /* Adjust margin as needed */
       }
 
@@ -162,7 +174,7 @@ header {
 }
 
 .header-logo {
-    width: 200px; /* Adjust the width as needed */
+    width: 170px; /* Adjust the width as needed */
     height: auto; /* Maintain aspect ratio */
     position: absolute; /* Position absolutely */
     left: 10px; /* Adjust the left position to your preference */
@@ -171,12 +183,12 @@ header {
 }
 
 .header-logo2 {
-    width: 200px; /* Adjust the width as needed */
+    width: 170px; /* Adjust the width as needed */
     height: auto; /* Maintain aspect ratio */
     position: absolute; /* Position absolutely */
     left: 50%; /* Center horizontally */
     transform: translateX(-50%); /* Center horizontally */
-    top: 10px; /* Adjust the top position to your preference */
+    top: 20px; /* Adjust the top position to your preference */
     z-index: 20; /* Ensure it stays above other elements, including the overlay */
 }
 
@@ -210,15 +222,30 @@ nav ul li a {
     background-color: none; /* Background color */
     text-decoration: none; /* Remove underline */
     border: none; /* Border color */
-    border-radius: 10px; /* Border radius */
     padding: 10px; /* Padding */
+    position: relative;
     transition: background-color 0.3s, color 0.3s; /* Smooth transition effect */
 }
 
 nav ul li a:hover {
     color: #3CB3F5;
     transition: color 0.3s ease;
-    box-shadow: 0 0 10px #3CB3F5; /* Add glow effect on hover */ /* Change background color on hover */ /* Change text color on hover */
+}
+
+nav ul li a:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 3px; /* Adjust the glow height as needed */
+    background-color: #3CB3F5; /* Glow color */
+    opacity: 0;
+    transition: opacity 0.3s; /* Smooth transition effect */
+}
+
+nav ul li a:hover:after {
+    opacity: 1; /* Show glow effect on hover */
 }
 
 .icon:hover {
@@ -457,7 +484,6 @@ footer {
     text-align: center;
     margin-bottom: 20px; /* Add margin to the bottom of each product */
     background-color: white;
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -609,7 +635,6 @@ footer {
     background-position: center; 
     color: #fff; /* Text color */
     padding: 20px;
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -629,7 +654,6 @@ footer {
 #contact-form {
     flex: 1;
     background-color: #fff;
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     max-width: 500px;
@@ -701,7 +725,6 @@ footer {
 .order-summary {
     background-color: #f9f9f9;
     padding: 20px;
-    border-radius: 10px;
     margin-bottom: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -816,7 +839,6 @@ footer {
 .checkout-form {
     background-color: #f9f9f9;
     padding: 20px;
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
@@ -900,7 +922,6 @@ footer {
 
 .account-form-container {
     background-color: #fff;
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     max-width: 500px;
@@ -974,7 +995,72 @@ footer {
     text-decoration: underline;
 }
 
-.commitment-section img {
-    border-radius: 10px;
-    max-width: 450px;
+.about-content {
+    position: relative;
+    max-width: 80%; 
+    margin: 0 auto;
+}
+
+.commitment-section {
+    position: relative;
+    max-width: 80%; 
+    margin: 0 auto;
+}
+
+.slideshow-container {
+    position: relative;
+    max-width: 80%; /* Adjust the width as needed */
+    margin: 0 auto; /* Center the slideshow horizontally */
+    overflow: hidden;
+}
+
+.image-container {
+    display: flex;
+    flex-wrap: wrap; /* Allow images to wrap within the container */
+    justify-content: center; /* Center the images horizontally */
+}
+
+.image-container img {
+    width: 100%;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: auto;
+    padding: 16px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 20px;
+    user-select: none;
+}
+
+.prev {
+    left: 0;
+}
+
+.next {
+    right: 0;
+}
+
+.dot-container {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+}
+
+.active {
+    background-color: #717171;
 }
