--- a/css/styles.css
+++ b/css/styles.css
@@ -636,6 +636,7 @@ footer {
     color: #fff; /* Text color */
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-decoration: none;
 }
 
 .company-address img {
@@ -688,6 +689,7 @@ footer {
     border-bottom: 2px solid #ccc;
     background-color: transparent;
     transition: border-bottom-color 0.3s ease;
+    border-radius: 0;
 }
 #contact-form input[type="text"]:focus,
 #contact-form input[type="email"]:focus,
@@ -879,6 +881,7 @@ footer {
     border-bottom: 2px solid #ccc;
     background-color: transparent;
     transition: border-bottom-color 0.3s ease;
+    border-radius: 0;
 }
 
 .checkout-form input[type="text"]:focus,
@@ -951,6 +954,7 @@ footer {
     border-bottom: 2px solid #ccc;
     background-color: transparent;
     transition: border-bottom-color 0.3s ease;
+    border-radius: 0;
 }
 .account-form-container input[type="text"]:focus,
 .account-form-container input[type="email"]:focus,
