--- a/css/styles.css
+++ b/css/styles.css
@@ -447,39 +447,6 @@ footer {
     font-weight: bold;
 }
 
-.add-to-cart-btn {
-    background-color: #333; /* Blue background */
-    color: #fff; /* White text */
-    border: none;
-    border-radius: 5px; /* Rounded corners */
-    padding: 10px 20px; /* Padding for better spacing */
-    font-size: 16px;
-    font-weight: bold; /* Bold text */
-    cursor: pointer;
-    transition: background-color 0.3s ease; /* Smooth transition on hover */
-    text-transform: uppercase; /* Uppercase text */
-    text-decoration: none;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add subtle shadow for depth */
-}
-
-/* Hover state */
-.add-to-cart-btn:hover {
-    background-color: #555; /* Darker blue on hover */
-}
-
-/* Focus state (when button is selected) */
-.add-to-cart-btn:focus {
-    outline: none; /* Remove default focus outline */
-    box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.5); /* Add blue border on focus */
-}
-
-/* Disabled state */
-.add-to-cart-btn:disabled {
-    background-color: #ccc; /* Light gray background when disabled */
-    color: #666; /* Dark gray text when disabled */
-    cursor: not-allowed; /* Change cursor to indicate button is disabled */
-}
-
 .fade-animation {
     opacity: 0; /* Initially hide the car list */
     animation: fadeIn 1s forwards; /* Apply fade-in animation */
@@ -627,34 +594,19 @@ footer {
 }
 
 .overlay h1 {
-    font-family: 'Arial', sans-serif; /* Specify the desired font family */
     font-size: 36px; /* Adjust the font size */
     font-weight: bold; /* Specify the font weight */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add a text shadow for better visibility */
 }
 
 .overlay p {
-    font-family: 'Arial', sans-serif; /* Specify the desired font family */
     font-size: 18px; /* Adjust the font size */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Add a text shadow for better visibility */
 }
 
 .overlay .btn {
-    font-family: 'Arial', sans-serif; /* Specify the desired font family */
-    font-size: 16px; /* Adjust the font size */
-    font-weight: bold; /* Specify the font weight */
-    text-decoration: none; /* Remove underline */
-    color: white; /* Text color */
-    background-color: #007bff; /* Button background color */
-    border: 2px solid #007bff; /* Button border */
-    padding: 10px 20px; /* Button padding */
-    border-radius: 5px; /* Button border radius */
+    font-weight: bold;
     transition: background-color 0.3s, color 0.3s; /* Smooth transition effect */
-}
-
-.overlay .btn:hover {
-    background-color: #0056b3; /* Change background color on hover */
-    color: #fff; /* Change text color on hover */
 }
 
 @keyframes slideIn {
@@ -771,7 +723,9 @@ footer {
     resize: vertical;
 }
 
+.btn,
 .cars-button,
+.add-to-cart-btn,
 #contact-form button,
 .checkout-form button,
 .account-form-submit {
@@ -787,18 +741,21 @@ footer {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.btn:hover,
 .cars-button:hover,
+.add-to-cart-btn:hover,
 #contact-form button:hover,
 .checkout-form button:hover,
 .account-form-submit:hover {
     background-color: #555;
 }
 
+.btn:focus,
 .cars-button:focus,
+.add-to-cart-btn:focus,
 #contact-form button:focus,
 .checkout-form button:focus,
-.account-form-submit:focus 
- {
+.account-form-submit:focus {
     outline: none; /* Remove default focus outline */
     box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.5); /* Add blue border on focus */
 }
@@ -1019,6 +976,7 @@ footer {
 
 .account-form-container input[type="text"],
 .account-form-container input[type="email"],
+.account-form-container input[type="password"],
 .account-form-container textarea {
     width: calc(100% - 22px);
     padding: 10px;
@@ -1031,6 +989,7 @@ footer {
 }
 .account-form-container input[type="text"]:focus,
 .account-form-container input[type="email"]:focus,
+.account-form-container input[type="password"]:focus,
 .account-form-container textarea:focus {
     outline: none;
     border-color: #3CB3F5; /* Change border color on focus */
@@ -1106,7 +1065,8 @@ footer {
     box-sizing: border-box;
 }
 
-.prev, .next {
+.prev, 
+.next {
     cursor: pointer;
     position: absolute;
     top: 50%;
